Update uui-server to spring-boot 3.2
- update spring-boot (3.0.11 -> 3.2.12)
- bump version to 15.0.4-SNAPSHOT

Issue-ID: USECASEUI-888
Change-Id: If152bdc1a9ef0404a49da5a4e953836c6f114110
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>